2003-03-17  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Give myBlackboardService protected state so it can be used by
	subclasses (e.g. NodeAgent).

	* AgentManager.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Add getComponents() method to retrieve a list of components
	installed in this container.

	* AgentContainer.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Add Collection methods so components other than agents can be
	added/removed using this interface.

2003-03-14  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Open up handling of persistence data to subclasses (NodeAgent).
	Add getPersistenceClient method so subclasses can override and
	substitute their own client.

2003-03-13  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimpleAgent.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Save agent component hierarchy in persistence snapshots.

2003-03-12  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/event/EventServiceComponent.java: 
	Bug #2658 -- Components incompatible with automatic service revocation feature
	Test for null service before trying to use it.

2002-11-07  Todd Wright  <twright@bbn.com>

	* all
	Fixed imports.

2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/scheduler/SchedulerServiceProvider.java:
	New default scheduler uses ThreadingService instead of real
	threads.

	* SimpleAgent.java:
	Use new ThreadService for creating the SchedulerServiceProvider.

2002-05-07  Ray Tomlinson  <RTomlinson@bbn.com>

	* service/scheduler/SchedulerServiceProvider.java:
	Use ThreadingService for new scheduler type that 
	* SimpleAgent.java:
	Add ThreadingServiceProvider. Use ThreadingService for
	SchedulerService.

2002-02-25  Ray Tomlinson  <RTomlinson@bbn.com>

	* ClusterImpl.java: