@@ -1,3 +1,10 @@
+2003-03-21  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* SimpleAgent.java:
+	Bug #2699 -- Time advance messages arrive before NaturalTimeService obtained
+	Move the MTS registration after other services are obtained.
+	
+
 2003-03-17  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* SimpleAgent.java: 
